methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:4: error: not enough arguments for method isFacingTrail: (c: java.awt.Color)Boolean.
Unspecified value parameter c.
    while(!isFacingTrail()){
                        ^SlugSnail:20: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
    if(getCouleurSol()==c:Color){
                      ^SlugSnail:20: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
    if(getCouleurSol()==c:Color){
                         ^SlugSnail:27: error: not found: value green
  return green
         ^