methods.slug.SlugSnail.scala.code
def hunt(c:Color) {
  while(!estSurBiscuit){
    while(!isFacingTrail()){
      gauche()
    }
    avance()
    marque()
  }
  
    prendBiscuit()
}


def isFacingTrail(c:Color):Boolean = {
    
  var color = false
  if(!estFaceMur){
    avance()
    if(getCouleurSol()==c:Color){
      color = true
      
    }
    recule
  }
  
  return green
}

def marque(){
  baisseBrosse()
  leveBrosse()
}